Improve the accent color for the dark theme (#1139)

--- a/ext/mixed/css/display.css
+++ b/ext/mixed/css/display.css
@@ -131,7 +131,7 @@
     /* Colors */
     --background-color: #1e1e1e;
     --glossary-image-background-color: #2f2f2f;
-    --accent-color: #0275d8;
+    --accent-color: #4eacfd;
     --link-color: var(--accent-color);
 
     --default-text-color: #d4d4d4;
