Dictionary display updates (#1146)
* Display dictionary-list as flex

* Move styles

* Move enabled toggle

* Update details

* Disable sorting based on priority

* Update styles

* Update title color when disabled

* Update display style of secondary search dictionaries

--- a/ext/bg/css/settings2.css
+++ b/ext/bg/css/settings2.css
@@ -1903,6 +1903,28 @@ body.preview-sidebar-visible .fab-container-item.fab-container-item-popup-previe
     display: block;
 }
 
+.dictionary-info {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+}
+.dictionary-info-label {
+    margin-left: 1em;
+}
+
+.dictionary-title {
+    color: inherit;
+    transition: color var(--animation-duration) ease-in-out;
+}
+.dictionary-item[data-enabled=false] .dictionary-title {
+    color: var(--text-color-light);
+}
+
+.dictionary-list {
+    display: flex;
+    flex-flow: column nowrap;
+    width: 100%;
+}
 .dictionary-list>.settings-item,
 .dictionary-list>.settings-item+.settings-item {
     margin-left: calc(var(--modal-padding-horizontal) * -1);
