Improve document focus control (#1167)
* Improve styles for #content-scroll-focus

* Create new class to manage and control document focus

* Use new focus class

* Add a check to prevent redundant .blur calls

--- a/ext/bg/css/settings2.css
+++ b/ext/bg/css/settings2.css
@@ -361,8 +361,16 @@ h3 {
     opacity: 0;
     margin: 0;
     padding: 0;
+    outline: none;
     background-color: transparent;
     display: inline;
+    width: 0;
+    height: 0;
+    line-height: 0;
+    user-select: none;
+}
+#content-scroll-focus::-moz-focus-inner {
+    border: 0;
 }
 .content-dimmer {
     display: block;
