--- a/ext/mixed/css/display.css
+++ b/ext/mixed/css/display.css
@@ -244,6 +244,24 @@ a {
 }
 
 
+/* Selection */
+#content-scroll-focus {
+    opacity: 0;
+    margin: 0;
+    padding: 0;
+    outline: none;
+    background-color: transparent;
+    display: inline;
+    width: 0;
+    height: 0;
+    line-height: 0;
+    user-select: none;
+}
+#content-scroll-focus::-moz-focus-inner {
+    border: 0;
+}
+
+
 /* Scrollbars */
 :root:not([data-theme=default]) .scrollbar {
     scrollbar-color: var(--scrollbar-thumb-color) var(--scrollbar-track-color);
