Remove "Top" link from settings v2 page (#1169)

--- a/ext/bg/css/settings2.css
+++ b/ext/bg/css/settings2.css
@@ -468,7 +468,7 @@ h3 {
     margin-right: calc(var(--padding) * 0.5);
 }
 .sidebar-body {
-    padding: 0 0 2em;
+    padding: 2em 0;
 }
 .sidebar-bottom {
     padding-bottom: 2em;
